# Study-Buddy

./: .gitignore  Jenkinsfile  README.md  app.py  pyproject.toml  requirements.txt  setup.py  wiki.md
manifests/: deployment.yaml  service.yaml
src/generator/: question_generator.py
src/models/: question_schemas.py
src/utils/: helpers.py
